modules/taskman.css
.initHandler:before {
  width: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: block;
  height: 115%;
  z-index: 999999;
  content: "Loading...";
  text-align: center;
  color: #bbb;
  text-shadow: none;
  line-height: 150px;
  vertical-align: bottom;
  background-image: url('patterns/tweed_@2X.png');
  background-color: gray;
}


.task-listview li p {
  font-size: 80%;
  font-weight: bold;
}

.task-listview .from-date,
.task-listview .to-date {
  color: #A52A2A;
}

.task-listview .state {
  color: green;
}

/*
 * Small alignment issue with select menu in header
 */

#task-sortby-button {
  margin-top: -0.5em;
}


/*
 * fix blank square when both collapsible listview and counter are present
 */

.ui-listview > .ui-li-has-count > .ui-btn, .ui-listview > .ui-li-static.ui-li-has-count, .ui-listview > .ui-li-divider.ui-li-has-count {
  padding-right: 0;
}

/*
 * on top of theme
 */

.ui-bar-a, .ui-page-theme-a .ui-bar-inherit, html .ui-bar-a .ui-bar-inherit,
html .ui-body-a .ui-bar-inherit, html body .ui-group-theme-a .ui-bar-inherit {
  background-image: url('patterns/tweed_@2X.png');
}

.ui-overlay-a,
.ui-page-theme-a,
.ui-page-theme-a .ui-panel-wrapper {
  background-image: url('patterns/pw_maze_white.png');
}

.ui-icon-delete:after {
  background-color: #cc0000 !important;
}


.ui-dialog-contain .ui-icon-delete:after {
  background-color: gray !important;
}


/****/

.ui-dialog-background {
  opacity: 0.5;
  display: block !important;
  -webkit-transition: opacity 0.5s ease-in;
}

.ui-dialog-background.pop.in {
  opacity: 1;
  -webkit-transition: opacity 0.5s ease-in;
}

.ui-dialog {
  min-height: 100% !important;
  background: transparent !important;
}

